third_party/rust/chromium_crates_io/vendor/proc-macro-error2-v2/tests/ui/to_tokens_span.stderr
error: whole type
 --> tests/ui/to_tokens_span.rs:3:17
  |
3 | to_tokens_span!(std::option::Option);
  |                 ^^^^^^^^^^^^^^^^^^^

error: explicit .span()
 --> tests/ui/to_tokens_span.rs:3:17
  |
3 | to_tokens_span!(std::option::Option);
  |                 ^^^
