third_party/rust/chromium_crates_io/vendor/proc-macro-error2-v2/tests/ui/to_tokens_span.rs
use test_crate::*;

to_tokens_span!(std::option::Option);

fn main() {}
